--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
     #    driver-class-name: oracle.jdbc.OracleDriver
     username: WL
     password: 1234zxcv
-    url: jdbc:mysql://192.168.1.4:3306/blbl?useUnicode=true&characterEncoding=utf8
+    # url 可以不加数据库名但是实体类的table name注解要加数据库名
+    url: jdbc:mysql://192.168.1.4:3306?useUnicode=true&characterEncoding=utf8
     driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
       # 初始化大小，最小，最大
