--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <junit.version>4.12</junit.version>
         <mybatis.plus.version>3.5.3</mybatis.plus.version>
         <fast.json.version>2.0.46</fast.json.version>
+        <sonar.organization>wusirs</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <!--    <dependencyManagement>-->
@@ -181,7 +183,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
     </dependencies>
     <!--    </dependencyManagement>-->
 
