--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <junit.version>4.12</junit.version>
         <mybatis.plus.version>3.5.3</mybatis.plus.version>
         <fast.json.version>2.0.46</fast.json.version>
+        <commons.pool2.version>2.0</commons.pool2.version>
         <sonar.organization>wusirs</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
@@ -171,6 +172,19 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!--    redis 线程池需要    -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons.pool2.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
