--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,3 +54,8 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.log4j2.Log4j2Impl
+netty:
+  server:
+    port: 8090
+    bossThreads: 1
+
