--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+<!--    netty    -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.42.Final</version>
+        </dependency>
     </dependencies>
     <!--    </dependencyManagement>-->
 
