--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,24 @@
         </dependency>
 
 
+<!--    concurrent    -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jcstress</groupId>
+            <artifactId>jcstress-core</artifactId>
+            <version>0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jcstress</groupId>
+            <artifactId>jcstress-samples</artifactId>
+            <version>0.5</version>
+        </dependency>
+
     </dependencies>
     <!--    </dependencyManagement>-->
 
